[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Wall.tscn" type="PackedScene" id=3]

[node name="Node2D" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Player2Score" type="Label" parent="."]
margin_left = 700.0
margin_top = 50.0
margin_right = 750.0
margin_bottom = 110.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1Score" type="Label" parent="."]
margin_left = 200.0
margin_top = 50.0
margin_right = 250.0
margin_bottom = 110.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayMessage" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 388.214
margin_top = 43.0813
margin_right = 638.214
margin_bottom = 73.0813
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 510.0
margin_right = 514.0
margin_bottom = 600.0
color = Color( 0.0784314, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartPositionPlayerTwo" type="Position2D" parent="."]
position = Vector2( 972, 300 )

[node name="StartPositionBall" type="Position2D" parent="."]
position = Vector2( 512, 300 )

[node name="StartPositionPlayerOne" type="Position2D" parent="."]
position = Vector2( 52, 300 )

[node name="PlayerTwo" parent="." instance=ExtResource( 1 )]

[node name="PlayerOne" parent="." instance=ExtResource( 1 )]
is_player_one = true

[node name="ColorRect4" type="ColorRect" parent="."]
margin_right = 4.0
margin_bottom = 600.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect5" type="ColorRect" parent="."]
margin_left = 1020.0
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WallTop" parent="." instance=ExtResource( 3 )]

[node name="WallBottom" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 600 )

[node name="LocalTwoPlayerTimer" type="Timer" parent="."]
wait_time = 0.01
[connection signal="hit" from="PlayerTwo" to="." method="_on_PlayerTwo_hit"]
[connection signal="hit" from="PlayerOne" to="." method="_on_PlayerOne_hit"]
[connection signal="timeout" from="LocalTwoPlayerTimer" to="." method="_on_LocalTwoPlayerTimer_timeout"]
